Mon Apr 28 17:57:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/examples/Notify/MC/monitor/monitor.mpc:
          Made project name more unique

        * orbsvcs/orbsvcs/AV/Flows_T.cpp:
          Initialise pointer with 0

Mon Apr 28 14:24:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Kokyu_dsrt_schedulers/EDF_Scheduler.h
        * examples/Kokyu_dsrt_schedulers/FP_Scheduler.cpp
        * examples/Kokyu_dsrt_schedulers/FP_Scheduler.h
        * examples/Kokyu_dsrt_schedulers/MIF_Scheduler.cpp
        * examples/Kokyu_dsrt_schedulers/MIF_Scheduler.h
        * examples/Kokyu_dsrt_schedulers/MUF_Scheduler.cpp
        * examples/Kokyu_dsrt_schedulers/MUF_Scheduler.h
        * examples/RTScheduling/Fixed_Priority_Scheduler/FP_Scheduler.h
        * examples/RTScheduling/MIF_Scheduler/MIF_Scheduler.h
        * orbsvcs/examples/FaultTolerance/RolyPoly/ORB_Initializer.h
        * orbsvcs/examples/FaultTolerance/RolyPoly/ReplicaController.h
        * orbsvcs/examples/LoadBalancing/ORBInitializer.h
        * orbsvcs/examples/LoadBalancing/ServerRequestInterceptor.h
        * orbsvcs/examples/ORT/Server_IORInterceptor.h
        * orbsvcs/examples/ORT/Server_IORInterceptor_ORBInitializer.h
        * orbsvcs/ImplRepo_Service/INS_Locator.h
        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientORBInitializer.h
        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientPolicy_i.h
        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientPolicy_i.inl
        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientPolicyFactory.h
        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientRequest_Interceptor.h
        * orbsvcs/orbsvcs/FaultTolerance/FT_IOGR_Property.h
        * orbsvcs/orbsvcs/FaultTolerance/FT_ORBInitializer.h
        * orbsvcs/orbsvcs/FaultTolerance/FT_Policy_i.h
        * orbsvcs/orbsvcs/FaultTolerance/FT_Policy_i.inl
        * orbsvcs/orbsvcs/FaultTolerance/FT_PolicyFactory.h
        * orbsvcs/orbsvcs/FaultTolerance/FT_ServerORBInitializer.h