@@ -2,6 +2,9 @@
 // $Id$
 //
 #include "tao/Monitor/Monitor_Impl.h"
+
+#if defined (TAO_HAS_MONITOR_FRAMEWORK) && (TAO_HAS_MONITOR_FRAMEWORK == 1)
+
 #include "ace/Monitor_Point_Registry.h"
 #include "ace/Monitor_Control_Action.h"
 #include "MonitorControl/MonitorControl.h"
@@ -256,4 +259,6 @@ Monitor_Impl::unregister_constraints (
         }
     }
 }
+
+#endif /* TAO_HAS_MONITOR_FRAMEWORK==1 */
 
