@@ -9,6 +9,8 @@
 
 #include "tao/Monitor/MonitorS.h"
 
+#if defined (TAO_HAS_MONITOR_FRAMEWORK) && (TAO_HAS_MONITOR_FRAMEWORK == 1)
+
 TAO_BEGIN_VERSIONED_NAMESPACE_DECL
 
 class Monitor_Impl
@@ -45,6 +47,8 @@ private:
 };
 
 TAO_END_VERSIONED_NAMESPACE_DECL
+
+#endif /* TAO_HAS_MONITOR_FRAMEWORK==1 */
 
 #include /**/ "ace/post.h"
 
