@@ -1,3 +1,12 @@
+Mon Apr 28 19:38:08 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * tao/Monitor/Monitor.h:
+        * tao/Monitor/Monitor.cpp:
+        * tao/Monitor/Monitor_Impl.h:
+        * tao/Monitor/Monitor_Impl.cpp:
+        
+          Added TAO_HAS_MONITOR_FRAMEWORK guards around these files.
+
 Mon Apr 28 17:57:32 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/examples/Notify/MC/monitor/monitor.mpc:
